sheep content list

--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -416,6 +416,8 @@
     <div class="a0"><i>▲▼◄►✓✗&nbsp;«» &nbsp;</i></div>
     <div class="a0"><i>€ · ♥★←→ &nbsp;</i></div>
     <div class="a0"><i>ʕ⊙ᴥ⊙ʔ ༼°▽°༽</i></div>
+    <div class="a0"><i>🐪🐫🐷🐸🐥🐬</i></div>
+    
 
     <div class="a23">
         <a href="https://fonts.google.com/?subset=cyrillic"><i>GFonts</i></a>
