--- a/app4K/index.html
+++ b/app4K/index.html
@@ -240,9 +240,8 @@
     <section class="cBlog cBlog__images">
 
 
-        <header>
-            <h3 class="cTitleAsTip">New images</h3>
-        </header>
+        <h3 class="cTitleAsTip">New images</h3>
+
         <!-- ------------------------------- Card -->
         <article class="cBlogCard">
             <figure class="image">
@@ -261,7 +260,7 @@
         <!-- ------------------------------- end -->
         <footer class="cBlogCard">
             <h4 class="cTitleAsTip">More images</h4>
-            Регулярные картинки в социальных сетях
+            <p>Регулярные картинки в социальных сетях</p>
             <ul>
                 <li><a href="https://www.facebook.com/jozef.dobric">facebook.com/jozef.dobric</a></li>
             </ul>
@@ -272,9 +271,8 @@
     <section class="cBlog cBlog__topics">
 
 
-        <header>
-            <h3 class="cTitleAsTip">Topics</h3>
-        </header>
+        <h3 class="cTitleAsTip">Topics</h3>
+
         <!-- ------------------------------- Card -->
         <article class="cBlogCard">
             <h4 class="aTitle"><a href="#">Image gallery</a></h4>
@@ -322,56 +320,6 @@
 </div>
 </section>
 
-<!-- =================================================== Contacts -->
-
-<section class="elLayer">
-<header id="Contacts" class="cStageHeader">
-    <h2 class="aCaption">Контакты <span class="aSymbol">/</span> Contacts</h2>
-</header>
-<div class="cContactArea elSection">
-    <div class="cContactArea__to">
-        <h3 class="cTitleAsTip">To sheep</h3>
-        E-mail is the best way to communicate<br>
-        <a href="mailto:sheep.today@gmail.com">sheep.today@gmail.com</a>
-    </div>
-    <div  class="cContactArea__from">
-        <h3 class="cTitleAsTip">From sheep</h3>
-
-        <h4 class="cTitleAsBlock">Sheep.Today News</h4>
-        <div class="cTitleAsSub">Newsletter in russian</div>
-        Почтовая рассылка — редкие письма в форме рассказа о новинках
-
-        <!-- Begin MailChimp Signup Form -->
-        <div class="elForm cForm" id="mc_embed_signup">
-        <form action="https://today.us16.list-manage.com/subscribe/post?u=f2f56449d7526a6a993997587&amp;id=122683d921" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
-                <div class="mc-field-group">
-                    <div class="field">
-                     <label for="mce-EMAIL">Email</label>
-                      <div class="control">
-                        <input type="email" value="" name="EMAIL" class="input required email" id="mce-EMAIL" placeholder="example@email.address">
-                        <div id="mce-responses" class="clear">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f2f56449d7526a6a993997587_122683d921" tabindex="-1" value=""></div>
-            <div class="field">
-                <div class="control">
-                    <input type="submit" value="Подписаться" name="subscribe" id="mc-embedded-subscribe" class="button">
-                </div>
-                </div>
-            </div>
-        </form>
-        </div>
-        <!--End mc_embed_signup-->
-
-    </div>
-</div>
-</section>
-
 <!-- =================================================== About the Artist -->
 
 <section class="elLayer">
@@ -382,17 +330,17 @@
 <div class="tufteDesign">
 <article>
     <section>
-        <h3 class="cTitleAsBlock">Зиновий Липинский / Zinovi Lipinski</h3>
-        <div class="cTitleAsSub">графика и инфографика</div>
+        <h2>Зиновий Липинский / Zinovi Lipinski</h2>
+        <p class="subtitle">графика и инфографика</p>
         <p>
-            <label for="intAboutAuthorpic" class="margin-toggle">&#8853;</label><input type="checkbox" id="intAboutAuthorpic" class="margin-toggle"/><span class="marginnote"><img src="data/demo/rhino.png" alt="Image of a Rhinoceros" class="zzz"/>F.J. Cole, “The History of Albrecht Dürer’s Rhinoceros in Zooological Literature,” <em>Science, Medicine, and History: Essays on the Evolution of Scientific Thought and Medical Practice</em> (London, 1953), ed. E. Ashworth Underwood, 337-356. From page 71 of Edward Tufte’s <em>Visual Explanations</em>.</span>
+            <label for="intAboutAuthorpic" class="margin-toggle">&#8853;</label><input type="checkbox" id="intAboutAuthorpic" class="margin-toggle"/><span class="marginnote"><img src="data/landing/zinovilipinski.png" alt="Zinovi Lipinski" class="zzz"/></span>
 
         На рисунках Зиновия — овечки с огромными глазами, толстые лисы, коты на крышах и крабы под пальмами. Все вместе, они участвуют в детализированных сюжетах, которые с восторгом рассматривают дети и взрослые дети.
         </p>
         <p>
         Для самого автора, нарисованные персонажи — участники математической игры. Линии переходят в формы, формы превращаются в символы, в сюжет и смысл. Почти все рисунки Зиновия несут прикладную пользу — это карты, шпаргалки, чертежи или навигационные знаки.
         </p>
-        <h4 class="cTitleAsTextline">Интересные факты</h4>
+        <h3>Интересные факты</h3>
         <p>
         Зиновий шесть лет путешествовал по Франции и Германии. Ходил пешком через леса и горы. Где знакомился с местными жителями и животными. На средиземноморском побережье Камарга танцевал танго с розовыми фламинго.
         </p>
@@ -408,66 +356,123 @@
 </div>
 </section>
 
+
+<!-- =================================================== Contacts -->
+
+<section class="elLayer">
+<header id="Contacts" class="cStageHeader">
+    <h2 class="aCaption">Контакты <span class="aSymbol">/</span> Contacts</h2>
+</header>
+<div class="elSection cContactArea textDesign textLayout">
+    <div class="cContactArea__to">
+        <h3 class="cTitleAsTip">To sheep</h3>
+        <div class="cTitleAsBlock">
+            E-mail is the best way to communicate<br>
+            <div class="cTextAsNotice--no">
+                <a href="mailto:sheep.today@gmail.com">sheep.today@gmail.com</a>
+            </div>
+        </div>
+    </div>
+    <div  class="cContactArea__from">
+        <h3 class="cTitleAsTip">From sheep</h3>
+
+        <h4 class="cTitleAsBlock">Sheep.Today News</h4>
+        <div class="cTitleAsSub">Newsletter in russian</div>
+        
+
+        <!-- Begin MailChimp Signup Form -->
+        <div class="elForm cForm" id="mc_embed_signup">
+            <div class="cTextAsNotice">
+                <p>Почтовая рассылка — редкие письма в форме рассказа о новинках на русском языке</p>
+            </div>
+            <form action="https://today.us16.list-manage.com/subscribe/post?u=f2f56449d7526a6a993997587&amp;id=122683d921" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <div class="field mc-field-group">
+                          <label class="label" for="mce-EMAIL">Напишите Email</label>
+                          <div class="control">
+                            <input type="email" value="" name="EMAIL" class="input required email" id="mce-EMAIL" placeholder="example@email.address">
+                            <div id="mce-responses" class="clear">
+                                    <div class="help response" id="mce-error-response" style="display:none"></div>
+                                    <div class="help response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="field" style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_f2f56449d7526a6a993997587_122683d921" tabindex="-1" value=""></div>
+                    <div class="field">
+                        <div class="control">
+                            <input type="submit" value="Подписаться на рассылку" name="subscribe" id="mc-embedded-subscribe" class="button">
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <!--End mc_embed_signup-->
+
+    </div>
+</div>
+</section>
+
+
 <!-- =================================================== Read more -->
 
-<div style="padding-top:4rem;"><img src="data/landing/borders-cats-src.svg" alt=""/></div>
-<div class="elLayer cLayerContrast">
+<div style="padding-top:4rem;"><img src="data/landing/borders-cats-src.svg" style="display:block;" alt=""/></div>
+<div class="elLayer cLayerContrast textLayout">
     <header class="cStageHeader">
         <h2 class="aCaption">And Now for Something <br> Completely Different</h2>
     </header>
-    <div class="tufteDesign">
-        <article>
-            <section>
-                <h3 class="cTitleAsTip">Inner links</h3>
-                <ul class="aList">
-                    <li><a href="is/animations/sheep170102.html">Funny Animations</a></li>
-                    <li><a href="is/sbaaahn-preview.png">S-Baaahn, U-Baaahn Berlin  (image)</a></li>
-                    <li><a href="is/welcome2017/">Calendar 2017  (PDF)</a></li>
-                    <li><a href="is/oleg-bausov/">Frontend in 2001: Artist Oleg Bausov</a></li>
-                </ul>
-            </section>
-            <section>
-                <h3 class="cTitleAsTip">Friends</h3>
-                <ul class="aList">
-                    <li>
-                        <a href="http://ennoiart.com/">ennoiart.com</a><br>
-                        Colorful illustrations by Ennoia
-                    </li>
-                </ul>
-            </section>
-        </article>
-    </div>
+    <section class="elSection cSomethingCompletelyDifferent">
+        <div class="aBlock">
+            <h3 class="cTitleAsTip">Inner links</h3>
+            <ul class="aList">
+                <li><a href="is/animations/sheep170102.html">Funny Animations</a></li>
+                <li><a href="is/sbaaahn-preview.png">S-Baaahn, U-Baaahn Berlin  (image)</a></li>
+                <li><a href="is/welcome2017/">Calendar 2017  (PDF)</a></li>
+                <li><a href="is/oleg-bausov/">Frontend in 2001: Artist Oleg Bausov</a></li>
+            </ul>
+        </div>
+        <div class="aBlock">
+            <h3 class="cTitleAsTip">Friends</h3>
+            <ul class="aList">
+                <li>
+                    <a href="http://ennoiart.com/">ennoiart.com</a><br>
+                    Colorful illustrations by Ennoia
+                </li>
+            </ul>
+        </div>
+    </section>
 </div>
 
 <!-- =================================================== The Ending -->
 
-<div class="elLayer cLayerContrast cLayerContrast--opposition">
-<div class="tufteDesign">
-<article>
-    <section>
-        <h2>Спасибо, до свидания! / Thank you! Come again!</h2>
-        <p>
-            <label for="intFooterLogo" class="margin-toggle">&#8853;</label><input type="checkbox" id="intFooterLogo" class="margin-toggle"/><span class="marginnote"><img src="app/img/sheep.today.svg" /></span>
-
-            <a href="mailto:sheep.today@gmail.com">sheep.today@gmail.com</a><br>
-            Made by sheeps for humans<br>
-            zl 2018<br>
-        </p>
-
-        <h3>Лайкни</h3>
-        <div class="social-likes">
-            <div data-service="facebook" title="Share link on Facebook">Facebook</div>
-            <div data-service="twitter" title="Share link on Twitter">Twitter</div>
-            <div data-service="pinterest" title="Share link on Pinterest" data-media="image link, required">Pinterest</div>
-            <div data-service="vkontakte" title="Share link on Vkontakte">Vkontakte</div>
+<div class="elLayer cLayerContrast cLayerContrast--opposition textLayout">
+    <section class="elSection cBottomGoodbye">
+        <div class="aBlock cBottomGoodbye__aside">
+            <figure class="image">
+                <img src="app/img/sheep.today.white.svg" />
+            </figure>
+            <h3 class="cTitleAsTip">Лайкни</h3>
+            <div class="social-likes">
+                <div data-service="facebook" title="Share link on Facebook">Facebook</div>
+                <div data-service="twitter" title="Share link on Twitter">Twitter</div>
+                <div data-service="pinterest" title="Share link on Pinterest" data-media="image link, required">Pinterest</div>
+                <div data-service="vkontakte" title="Share link on Vkontakte">Vkontakte</div>
+            </div>
         </div>
+        <div class="aBlock cBottomGoodbye__content">
+            <h2 class="cTitleAsBlock">
+                Спасибо, до свидания!<br>
+                Thank you! Come again!<br>
+            </h2>
+            <div>
+                <a href="mailto:sheep.today@gmail.com">sheep.today@gmail.com</a><br>
+                Made by sheeps for humans<br>
+                zl 2018<br><br>
 
-        <p>
-            <a href="#Home">↑ Scroll to Top</a>
-        </p>
+                <a href="#Home">↑ Scroll to Top</a>
+            </div>
+
+        </div>
     </section>
-</article>
-</div>
 </div>
 
 
@@ -550,7 +555,7 @@
 
 <!-- =================================================== [Third Tools] -->
 
-<!-- mailchimp --><script type='text/javascript'src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array(); fnames[0]='EMAIL'; ftypes[0]='email'; fnames[1]='FNAME'; ftypes[1]='text'; fnames[2]='LNAME'; ftypes[2]='text'; fnames[3]='BIRTHDAY'; ftypes[3]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script><!-- / -->
+<!-- mailchimp --><script type='text/javascript'src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>$(function($) {window.fnames = new Array(); window.ftypes = new Array(); fnames[0]='EMAIL'; ftypes[0]='email'; fnames[1]='FNAME'; ftypes[1]='text'; fnames[2]='LNAME'; ftypes[2]='text'; fnames[3]='BIRTHDAY'; ftypes[3]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script><!-- / -->
 
 
 </body>
