primarysheep icon static

--- a/app4K/index.html
+++ b/app4K/index.html
@@ -88,7 +88,7 @@
 
 
 <section id="Home" class="cLanding cLandingDefault">
-    <header class="cSiteHeader cLanding__header">
+    <header class="cSiteHeader cLanding__header bPrimarysheep">
         <h2 class="aTitle">www.sheep.today</h2>
         <nav class="cSiteHeader__menu">
 
@@ -107,16 +107,16 @@
 
         <!-- ================================================== landing content -->
 
-        <div class="cLanding__image">
-            <figure class="image">
-                <img src="data/demo/writing.svg" alt=""/>
-            </figure>
-        </div>
         <div class="cLanding__content">
             <div class="aCard">
                 <h4>Landing message</h4>
                 <p>Овечки всё делают для людей</p>
             </div>
+        </div>
+        <div class="cLanding__image">
+            <figure class="image">
+                <img src="data/demo/writing.svg" alt=""/>
+            </figure>
         </div>
 
     </div>
@@ -504,7 +504,7 @@
 
 <aside class="elSidePanel cSitePanel">
     <!-- trigger -->
-    <div class="elSitePanel__floatTrigger cSitePanel__floatTrigger">
+    <div class="elSitePanel__floatTrigger cSitePanel__floatTrigger isOnTop">
         <div class="jsAppTrigger" data-trigga="hasOpenSitePanel">
             <div class="isWhenInactive">
                 <button class="aIcon aIcon--primarysheep"></button>
